<resources>
    <string name="app_name">entre 3+1 proto 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="UserName">User Name</string>
    <string name="InGame_Money">Credit Value</string>
    <string name="Setting_Button">Setting</string>
    <string name="Basket_Button">Basket</string>
    <string name="recommended_title">Recommended for ()</string>
    <string name="LogIn">Log In</string>
    <string name="Home_Catalog">Home</string>
    <string name="Register_Button">Register</string>
    <string name="UserName_Hint">Username</string>
    <string name="Password_Hint">Password</string>
    <string name="Confirm_PassWord_Hint">Confirm Password</string>
    <string name="Email">Email</string>
    <string name="log_off">Log off</string>
    <string name="catalog">Catalog</string>
</resources>
